--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "proxy": "http://localhost:3001",
+
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -30,4 +32,5 @@
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
   }
+
 }
