--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -4,7 +4,6 @@
   "version": "0.0.0",
   "type": "module",
   "proxy": "http://localhost:3001",
-
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -18,7 +17,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.25.1",
+    "react-spinners": "^0.14.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
@@ -32,5 +32,4 @@
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
   }
-
 }
