added 'add job page' and 'individual job listing page'

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,7 @@
     "express": "^4.19.2",
     "mongoose": "^8.5.2",
     "nodemon": "^3.1.4",
+    "params": "^0.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
